--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -138,6 +138,7 @@ a{
 }
 
 a:hover{
+  background-color: yellow;
 }
 
 /* Utilities
